# dispatch

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  dispatch-design.md  dispatch-timer-spec.md
src/: error.rs  lib.rs  main.rs  mcp_client.rs  mcp_server.rs  nonce.rs  orchestrator.rs  pid.rs  reminder.rs  signal.rs  task.rs
