[package]
name = "dispatch"
version = "0.1.0"
edition = "2021"
description = "Signal-driven task orchestrator for MCP servers"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
